# telemetry-playground-ecs-msk-elk

./: .gitignore  .gitmodules  Makefile  README.md  common.mk
elk/: Makefile
elk/elasticsearch/: docker-compose.yml  ecs-params.yml
elk/kibana/: Makefile  docker-compose.yml  ecs-params.yml
elk/logstash/: Makefile
kafka/: Makefile
kafka/kafdrop/: Makefile  docker-compose.yml
kafka/kafka-manager/: Makefile  docker-compose.yml
kafka/ksql/: Makefile  docker-compose.yml  ecs-params.yml
metrics/: Makefile
metrics/haggar/: Makefile  README.md  docker-compose.yml
metrics/riemann/: Makefile
msk-ingress/: Makefile
msk-ingress/haproxy/: Makefile  docker-compose.yml  ecs-params.yml  haproxy.cfg
msk-ingress/logs-proxy/: Makefile  haproxy.cfg
msk-ingress/logs-proxy-riemann-wip/: docker-compose.yml  produce-logs.sh  riemann-fluentd-entrypoint.sh  riemann-fluentd-fluent.conf
msk-ingress/riemann/: Dockerfile-riemann-fluentd  Makefile  docker-compose.yml  riemann-logs.config  riemann-metrics.config
msk-ingress/riemann-fluentd/: Dockerfile
sandbox/clickhouse/: README.md  clickhouse-docker.py  (+1 more)
sandbox/collectd/collectd/mdtp_scripts/collectd_logstash/: .coverage  pyproject.toml
sandbox/collectd/collectd/mdtp_scripts/collectd_logstash/telemetry_collectd_logstash/: json_flatten-0.1-py3-none-any.whl  plugin.py
sandbox/collectd/collectd/mdtp_scripts/collectd_logstash/telemetry_collectd_logstash.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
sandbox/collectd/collectd/mdtp_scripts/collectd_logstash/tests/: test_plugin.py
(+91 files in other folders)
