[tool.poetry]
name = "telemetry_collectd_logstash"
version = "0.1.0"
description = "Collectd Python package to fetch and publish stats from Logstash nodes"
authors = ["Team Telemetry"]
license = "Proprietary"

[tool.poetry.dependencies]
python = "^3.8"
json-flatten = "^0.1"
requests = "^2.24.0"

[tool.poetry.dev-dependencies]
pytest = "^6.1.0"
pytest-cov = "^2.10.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
